Fix vulnerability in Dockerfile
